# stack-based-nightmare

./: .cz.toml  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/cli/: cli.rs
src/core/: init.rs  mod.rs  runner.rs
src/vm/: instruction.rs  mod.rs  parser.rs  types.rs  vm.rs
src/vm/builtins/: builtin_functions.rs  mod.rs
