[package]
name = "stack-based-nightmare"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sbn"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.46", features = ["derive"] }
color-eyre = "0.6.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
